<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">


    <TextView
        android:id="@+id/about_text_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/select_text_to_open_menu" />

    <TextView
        android:id="@+id/about_text_select_v2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:layout_margin="20dp"
        android:text="@string/select_text_to_open_custom_menu" />

    <TextView
        android:id="@+id/about_text_select_v3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/click_to_open_floating_context_menu" />

</LinearLayout>