<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:padding="16dp"
        android:rowCount="2">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:weightSum="3">


                <TextView
                    android:id="@+id/group_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:text="@string/family" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/group_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_margin="32dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/fam" />

                    <TextView
                        android:id="@+id/group_ntt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="0"
                        android:text="@string/_13_hour_ago" />
                    <TextView
                        android:id="@+id/group_mem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="0"
                        android:text="@string/_6_members" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:weightSum="3">


                <TextView
                    android:id="@+id/group_title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:text="@string/friends" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/group_image2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_margin="32dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/fri" />

                <TextView
                    android:id="@+id/group_ntt2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="0"
                    android:text="@string/app_name" />
                <TextView
                    android:id="@+id/group_mem2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="0"
                    android:text="@string/app_name" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:weightSum="3">


                <TextView
                    android:id="@+id/group_title3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:text="@string/collage" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/group_image3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_margin="32dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/col" />

                <TextView
                    android:id="@+id/group_ntt3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="0"
                    android:text="@string/_10_days_ago" />
                <TextView
                    android:id="@+id/group_mem3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="0"
                    android:text="@string/_7_members" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:weightSum="3">


                <TextView
                    android:id="@+id/group_title4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:text="@string/business" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/group_image4"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_margin="32dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/bus" />

                <TextView
                    android:id="@+id/group_ntt4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="0"
                    android:text="@string/_2_days_ago" />
                <TextView
                    android:id="@+id/group_mem4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="0"
                    android:text="@string/_2_members" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/groups_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@color/colorPrimary"
        app:srcCompat="@drawable/ic_group_add_black_24dp" />

</RelativeLayout>